learn page: fix whitespace

--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -12,8 +12,11 @@
 }
 
 .slide {
-  display: flex;
   width: 100%;
+}
+
+.slide-flex {
+  display: flex;
 }
 
 .slide-wrapper {
